--- a/index.html
+++ b/index.html
@@ -705,11 +705,11 @@
                     </li>
                     <li>
                         <i class="fas fa-phone"></i>
-                        <span>+1 234 567 8900</span>
+                        <span>+254 725 942 450</span>
                     </li>
                     <li>
                         <i class="fas fa-envelope"></i>
-                        <span>contact@mshukri.com</span>
+                        <span>mhassandiin@gmail.com</span>
                     </li>
                 </ul>
             </div>
